--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
             android:layout_margin="4dp"
             android:elevation="2dp"
             android:background="#FFFFFF"
-            app:borderColor="@color/orange_700"
+            app:segmentedBorderColor="@color/orange_700"
             app:borderWidth="1dp"
             app:divider="@color/orange_700"
             app:dividerPadding="10dp"
@@ -153,7 +153,7 @@
             android:layout_margin="10dp"
             android:elevation="2dp"
             android:background="@color/red_700"
-            app:borderColor="@color/black"
+            app:segmentedBorderColor="@color/black"
             app:borderWidth="1dp"
             app:divider="@color/black"
             app:dividerPadding="10dp"
@@ -223,7 +223,7 @@
                 android:layout_weight="1"
                 android:elevation="2dp"
                 android:background="@color/white"
-                app:borderColor="@color/black"
+                app:segmentedBorderColor="@color/black"
                 app:borderWidth="1dp"
                 app:divider="@color/black"
                 app:dividerWidth="2dp"
@@ -405,7 +405,7 @@
             android:layout_margin="4dp"
             android:elevation="2dp"
             android:background="@color/white"
-            app:borderColor="@color/black"
+            app:segmentedBorderColor="@color/black"
             app:borderWidth="1dp"
             app:draggable="true"
             app:position="0"
@@ -596,7 +596,7 @@
             app:radius="30dp"
             app:rippleColor="@color/black"
             app:selectedBackground="@color/blue_500"
-            app:selectedBorderColor="#555555"
+            app:selectedsegmentedBorderColor="#555555"
             app:selectedBorderWidth="2dp"
             app:selectedButtonRadius="30dp"
             app:selectionAnimationDuration="1000">
@@ -703,7 +703,7 @@
             app:draggable="true"
             app:selectedBackground="@color/indigo_800"
             app:borderWidth="1dp"
-            app:borderColor="@color/indigo_800"
+            app:segmentedBorderColor="@color/indigo_800"
             app:radius="12dp"
             app:ripple="true"
             app:rippleColor="@color/indigo_800"
